--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "heart.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node heart.js"
+    "start": "npm start"
   },
   "keywords": [
     "termux",
